name: ghcjs-dom
version: 0.1.1.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: DOM library that supports both GHCJS and WebKitGTK
description: Documentent Object Model (DOM) functions that work with
             GHCJS, but can also be used with GHC and WebKitGTK.
author: Hamish Mackenzie
data-dir: ""
category: Web

Source-Repository head
  type:         git
  location:     https://github.com/ghcjs/ghcjs-dom

flag ghcjs
    description: Tell cabal we are using ghcjs (work around until hackage supports impl(ghcjs))
    default: True

flag jsffi
    description: Use JavaScriptFFI extension for GHCJS JavaScript output
    default: True

flag webkit
    description: Use WebKitGtk DOM functions
    default: False

flag jsc
    description: Use WebKitGtk JavaScriptCore
    default: False

flag gtk3
    Description: Use GTK3 rather than GTK2 (only matters when using webkit)
    Default: True

library
    build-depends: base <5,
                   mtl -any,
                   text >= 0.11.0.6 && < 1.3

    default-language: Haskell2010
    exposed-modules:
          GHCJS.DOM
          GHCJS.DOM.Types
          GHCJS.DOM.Attr
          GHCJS.DOM.BarProp
          GHCJS.DOM.Blob
          GHCJS.DOM.CharacterData
          GHCJS.DOM.Console
          GHCJS.DOM.Css
          GHCJS.DOM.CSSRule
          GHCJS.DOM.CSSRuleList
          GHCJS.DOM.CSSStyleDeclaration
          GHCJS.DOM.CSSStyleSheet
          GHCJS.DOM.CSSValue
          GHCJS.DOM.Document
          GHCJS.DOM.DocumentType
          GHCJS.DOM.DOMApplicationCache
          GHCJS.DOM.DOMImplementation
          GHCJS.DOM.DOMMimeType
          GHCJS.DOM.DOMMimeTypeArray
          GHCJS.DOM.DOMNamedFlowCollection
          GHCJS.DOM.DOMPlugin
          GHCJS.DOM.DOMPluginArray
          GHCJS.DOM.DOMSelection
          GHCJS.DOM.DOMSettableTokenList
          GHCJS.DOM.DOMTokenList
          GHCJS.DOM.DOMWindow
          GHCJS.DOM.DOMWindowCSS
          GHCJS.DOM.Element
          GHCJS.DOM.Event
          GHCJS.DOM.EventM
          GHCJS.DOM.Events
--          GHCJS.DOM.EventTarget
          GHCJS.DOM.EventTargetClosures
          GHCJS.DOM.File
          GHCJS.DOM.FileList
          GHCJS.DOM.History
          GHCJS.DOM.HTMLAnchorElement
          GHCJS.DOM.HTMLAppletElement
          GHCJS.DOM.HTMLAreaElement
          GHCJS.DOM.HTMLBaseElement
          GHCJS.DOM.HTMLBaseFontElement
          GHCJS.DOM.HTMLBodyElement
          GHCJS.DOM.HTMLBRElement
          GHCJS.DOM.HTMLButtonElement
          GHCJS.DOM.HTMLCollection
          GHCJS.DOM.HTMLDirectoryElement
          GHCJS.DOM.HTMLDivElement
          GHCJS.DOM.HTMLDListElement
          GHCJS.DOM.HTMLDocument
          GHCJS.DOM.HTMLElement
          GHCJS.DOM.HTMLFieldSetElement
          GHCJS.DOM.HTMLFontElement
          GHCJS.DOM.HTMLFormElement
          GHCJS.DOM.HTMLFrameElement
          GHCJS.DOM.HTMLFrameSetElement
          GHCJS.DOM.HTMLHeadElement
          GHCJS.DOM.HTMLHeadingElement
          GHCJS.DOM.HTMLHRElement
          GHCJS.DOM.HTMLHtmlElement
          GHCJS.DOM.HTMLIFrameElement
          GHCJS.DOM.HTMLImageElement
          GHCJS.DOM.HTMLInputElement
          GHCJS.DOM.HTMLLabelElement
          GHCJS.DOM.HTMLLegendElement
          GHCJS.DOM.HTMLLIElement
          GHCJS.DOM.HTMLLinkElement
          GHCJS.DOM.HTMLMapElement
          GHCJS.DOM.HTMLMenuElement
          GHCJS.DOM.HTMLMetaElement
          GHCJS.DOM.HTMLModElement
          GHCJS.DOM.HTMLObjectElement
          GHCJS.DOM.HTMLOListElement
          GHCJS.DOM.HTMLOptGroupElement
          GHCJS.DOM.HTMLOptionElement
          GHCJS.DOM.HTMLOptionsCollection
          GHCJS.DOM.HTMLParagraphElement
          GHCJS.DOM.HTMLParamElement
          GHCJS.DOM.HTMLPreElement
          GHCJS.DOM.HTMLQuoteElement
          GHCJS.DOM.HTMLScriptElement
          GHCJS.DOM.HTMLSelectElement
          GHCJS.DOM.HTMLStyleElement
          GHCJS.DOM.HTMLTableCaptionElement
          GHCJS.DOM.HTMLTableCellElement
          GHCJS.DOM.HTMLTableColElement
          GHCJS.DOM.HTMLTableElement
          GHCJS.DOM.HTMLTableRowElement
          GHCJS.DOM.HTMLTableSectionElement
          GHCJS.DOM.HTMLTextAreaElement
          GHCJS.DOM.HTMLTitleElement
          GHCJS.DOM.HTMLUListElement
          GHCJS.DOM.KeyboardEvent
          GHCJS.DOM.Location
          GHCJS.DOM.MediaList
          GHCJS.DOM.MediaQueryList
          GHCJS.DOM.MouseEvent
          GHCJS.DOM.NamedNodeMap
          GHCJS.DOM.Navigator
          GHCJS.DOM.Node
          GHCJS.DOM.NodeFilter
          GHCJS.DOM.NodeIterator
          GHCJS.DOM.NodeList
          GHCJS.DOM.ProcessingInstruction
          GHCJS.DOM.Range
          GHCJS.DOM.Ranges
          GHCJS.DOM.Screen
          GHCJS.DOM.StyleMedia
          GHCJS.DOM.StyleSheet
          GHCJS.DOM.StyleSheetList
          GHCJS.DOM.Stylesheets
          GHCJS.DOM.Storage
          GHCJS.DOM.Text
          GHCJS.DOM.Traversal
          GHCJS.DOM.TreeWalker
          GHCJS.DOM.UIEvent
          GHCJS.DOM.ValidityState
          GHCJS.DOM.WebKitNamedFlow
          GHCJS.DOM.WebKitPoint
          GHCJS.DOM.XPathExpression
          GHCJS.DOM.XPathNSResolver
          GHCJS.DOM.XPathResult
          GHCJS.DOM.DOMSecurityPolicy
          GHCJS.DOM.DOMStringList
          GHCJS.DOM.Geolocation
          GHCJS.DOM.HTMLCanvasElement
          GHCJS.DOM.HTMLDetailsElement
          GHCJS.DOM.HTMLEmbedElement
          GHCJS.DOM.HTMLKeygenElement
          GHCJS.DOM.HTMLMarqueeElement
          GHCJS.DOM.HTMLMediaElement
          GHCJS.DOM.HTMLVideoElement
          GHCJS.DOM.MediaError
          GHCJS.DOM.StorageInfo
          GHCJS.DOM.TimeRanges
          -- GHCJS.DOM.WebKitAnimation
          -- GHCJS.DOM.WebKitAnimationList

    -- Make sure ghcjs gets turned off if ghcjs-base is not avaialbe
    if flag(ghcjs)
        build-depends: ghcjs-base

--    if impl(ghcjs) && flag(jsffi)
    if flag(ghcjs) && flag(jsffi)
        cpp-options: -DUSE_JAVASCRIPTFFI
        build-depends: ghcjs-base

--    if !impl(ghcjs) || flag(webkit)
    if !flag(ghcjs) || flag(webkit)
        cpp-options: -DUSE_WEBKIT
        build-depends: glib >=0.13.0.0 && <0.14,
                       transformers >=0.3.0.0 && <0.5
        if flag(gtk3)
            build-depends: gtk3 >=0.13.0.0 && <0.14, webkitgtk3 >=0.13.0.0 && <0.14
        else
            build-depends: gtk >=0.13.0.0 && <0.14, webkit >=0.13.0.0 && <0.14
        c-sources:      cbits/ghcjs_stubs.c

    hs-source-dirs: src
    exposed: True
    buildable: True

